# django-template

./: Makefile  README.md  docker-compose.local.yml  pyproject.toml
compose/dev/django/: start
compose/local/django/: Dockerfile  start
compose/prd/django/: start
compose/staging/django/: Dockerfile  start
env/: .dev  .local
project_name/settings/: base.py  local.py  secrets.py
